:ambulance: fix: overflow-x in album musics

--- a/src/styles/album.css
+++ b/src/styles/album.css
@@ -49,6 +49,7 @@
 
   .album {
     height: calc(100% - 90px) ! important;
+    overflow-x: hidden;
     overflow-y: scroll ! important;
   }
 
